@@ -1,7 +1,7 @@
 ;;; -*- lexical-binding: nil; -*-
 ;;; action-lock.el --- invoke magic action by RET key on spell strings
 
-;; Copyright (C) 2002, 2003, 2004, 2005-2025
+;; Copyright (C) 2002, 2003, 2004, 2005-2026
 ;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;
 ;; This program is free software; you can redistribute it and/or modify
