@@ -1,7 +1,7 @@
 ;;; -*- lexical-binding: nil; -*-
 ;;; honest-report.el --- make bug report with screenshot and keylog
 
-;; Copyright (C) 2005-2025
+;; Copyright (C) 2005-2026
 ;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;
 ;; This program is free software; you can redistribute it and/or modify
