@@ -1,7 +1,7 @@
 ;;; -*- lexical-binding: nil; -*-
 ;;; howm-lang-ja.el --- Wiki-like note-taking tool
 ;;; -*- Coding: utf-8 -*-
-;;; Copyright (C) 2005-2025
+;;; Copyright (C) 2005-2026
 ;;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
